added html directions

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <h1>Welcome to the Mean Girls Characters API</h1>
+    <p>use path /insert name of character here</p>
 </body>
 
 </html>
