made html directions more clear

--- a/index.html
+++ b/index.html
@@ -10,7 +10,19 @@
 
 <body>
     <h1>Welcome to the Mean Girls Characters API</h1>
-    <p>use path /insert name of character here</p>
+    <p>use path /api/*insert name of character here*</p>
+    <h2>Use the following character names:</h2>
+    <ul>
+        <li>Regina</li>
+        <li>Cady</li>
+        <li>Karen</li>
+        <li>Janis</li>
+        <li>Damian</li>
+        <li>Kevin G</li>
+        <li>Gretchen</li>
+        <li>Aaron</li>
+        <li>Coach Carr</li>
+    </ul>
 </body>
 
 </html>
